syntax = "proto3";
package timeseries_buffer;

service BufferAgent {
    rpc SendTimeseriesBuffer (BufferRequest) returns (BufferResponse);
}

message BufferRequest {
    bytes data = 1;
}

message BufferResponse {
    string confirmation = 1;
}
